bug: flow higher than limits on min deviation opf

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,6 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "93f21948",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from power.systems.ieee14 import IEEE14\n",
+    "from power import *\n",
+    "from power_flow.AC_PF import AC_PF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d07ea523",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "=== Iteration 0 === \n",
+      "Bus_1: P = 0.1447pu, Q = 0.4547pu, V = 1.0600pu, theta = 0.0000°\n",
+      "Bus_2: P = 0.1224pu, Q = 0.3287pu, V = 1.0450pu, theta = 0.0000°\n",
+      "Bus_3: P = -0.0201pu, Q = -0.1578pu, V = 1.0100pu, theta = 0.0000°\n",
+      "Bus_4: P = -0.0957pu, Q = -0.1540pu, V = 1.0000pu, theta = 0.0000°\n",
+      "Bus_5: P = -0.1381pu, Q = -0.5232pu, V = 1.0000pu, theta = 0.0000°\n",
+      "Bus_6: P = 0.4928pu, Q = 0.9890pu, V = 1.0700pu, theta = 0.0000°\n",
+      "Bus_7: P = 0.0000pu, Q = -0.6185pu, V = 1.0000pu, theta = 0.0000°\n",
+      "Bus_8: P = 0.0000pu, Q = 0.5569pu, V = 1.0900pu, theta = 0.0000°\n",
+      "Bus_9: P = -0.0000pu, Q = -0.2475pu, V = 1.0000pu, theta = 0.0000°\n",
+      "Bus_10: P = -0.0000pu, Q = 0.0000pu, V = 1.0000pu, theta = 0.0000°\n",
+      "Bus_11: P = -0.1369pu, Q = -0.2866pu, V = 1.0000pu, theta = 0.0000°\n",
+      "Bus_12: P = -0.1068pu, Q = -0.2223pu, V = 1.0000pu, theta = 0.0000°\n",
+      "Bus_13: P = -0.2169pu, Q = -0.4272pu, V = 1.0000pu, theta = 0.0000°\n",
+      "Bus_14: P = 0.0000pu, Q = 0.0000pu, V = 1.0000pu, theta = 0.0000°\n",
+      " \n",
+      "=== Iteration 1 === \n",
+      "Bus_1: P = 2.2151pu, Q = -0.1790pu, V = 1.0600pu, theta = -0.0000°\n",
+      "Bus_2: P = 0.2454pu, Q = 0.1868pu, V = 1.0450pu, theta = -4.6964°\n",
+      "Bus_3: P = -0.9328pu, Q = 0.0012pu, V = 1.0100pu, theta = -12.3238°\n",
+      "Bus_4: P = -0.4615pu, Q = 0.1011pu, V = 1.0252pu, theta = -10.0899°\n",
+      "Bus_5: P = -0.0379pu, Q = 0.0852pu, V = 1.0273pu, theta = -8.5395°\n",
+      "Bus_6: P = -0.1090pu, Q = -0.0591pu, V = 1.0700pu, theta = -13.9027°\n",
+      "Bus_7: P = 0.0113pu, Q = 0.0591pu, V = 1.0698pu, theta = -13.2692°\n",
+      "Bus_8: P = -0.0000pu, Q = 0.1248pu, V = 1.0900pu, theta = -13.2692°\n",
+      "Bus_9: P = -0.3338pu, Q = -0.1489pu, V = 1.0639pu, theta = -14.9793°\n",
+      "Bus_10: P = -0.0990pu, Q = -0.0596pu, V = 1.0579pu, theta = -15.1023°\n",
+      "Bus_11: P = -0.0257pu, Q = -0.0005pu, V = 1.0624pu, theta = -14.6344°\n",
+      "Bus_12: P = -0.0574pu, Q = -0.0029pu, V = 1.0590pu, theta = -14.8203°\n",
+      "Bus_13: P = -0.1274pu, Q = -0.0358pu, V = 1.0542pu, theta = -14.9347°\n",
+      "Bus_14: P = -0.1609pu, Q = -0.0480pu, V = 1.0412pu, theta = -16.0524°\n",
+      " \n",
+      "=== Iteration 2 === \n",
+      "Bus_1: P = 2.3230pu, Q = -0.1690pu, V = 1.0600pu, theta = -0.0000°\n",
+      "Bus_2: P = 0.1831pu, Q = 0.2962pu, V = 1.0450pu, theta = -4.9790°\n",
+      "Bus_3: P = -0.9419pu, Q = 0.0436pu, V = 1.0100pu, theta = -12.7145°\n",
+      "Bus_4: P = -0.4777pu, Q = 0.0395pu, V = 1.0187pu, theta = -10.3217°\n",
+      "Bus_5: P = -0.0757pu, Q = -0.0153pu, V = 1.0203pu, theta = -8.7800°\n",
+      "Bus_6: P = -0.1118pu, Q = 0.0466pu, V = 1.0700pu, theta = -14.2179°\n",
+      "Bus_7: P = 0.0002pu, Q = 0.0005pu, V = 1.0620pu, theta = -13.3667°\n",
+      "Bus_8: P = 0.0000pu, Q = 0.1732pu, V = 1.0900pu, theta = -13.3667°\n",
+      "Bus_9: P = -0.2955pu, Q = -0.1658pu, V = 1.0564pu, theta = -14.9464°\n",
+      "Bus_10: P = -0.0901pu, Q = -0.0580pu, V = 1.0514pu, theta = -15.1034°\n",
+      "Bus_11: P = -0.0349pu, Q = -0.0179pu, V = 1.0571pu, theta = -14.7920°\n",
+      "Bus_12: P = -0.0610pu, Q = -0.0160pu, V = 1.0552pu, theta = -15.0729°\n",
+      "Bus_13: P = -0.1349pu, Q = -0.0579pu, V = 1.0505pu, theta = -15.1548°\n",
+      "Bus_14: P = -0.1491pu, Q = -0.0500pu, V = 1.0358pu, theta = -16.0377°\n",
+      " \n",
+      "=== Iteration 3 === \n",
+      "Bus_1: P = 2.3239pu, Q = -0.1689pu, V = 1.0600pu, theta = -0.0000°\n",
+      "Bus_2: P = 0.1830pu, Q = 0.2970pu, V = 1.0450pu, theta = -4.9809°\n",
+      "Bus_3: P = -0.9420pu, Q = 0.0439pu, V = 1.0100pu, theta = -12.7180°\n",
+      "Bus_4: P = -0.4780pu, Q = 0.0390pu, V = 1.0186pu, theta = -10.3242°\n",
+      "Bus_5: P = -0.0760pu, Q = -0.0160pu, V = 1.0203pu, theta = -8.7826°\n",
+      "Bus_6: P = -0.1120pu, Q = 0.0474pu, V = 1.0700pu, theta = -14.2227°\n",
+      "Bus_7: P = 0.0000pu, Q = 0.0000pu, V = 1.0620pu, theta = -13.3682°\n",
+      "Bus_8: P = 0.0000pu, Q = 0.1736pu, V = 1.0900pu, theta = -13.3682°\n",
+      "Bus_9: P = -0.2950pu, Q = -0.1660pu, V = 1.0563pu, theta = -14.9466°\n",
+      "Bus_10: P = -0.0900pu, Q = -0.0580pu, V = 1.0513pu, theta = -15.1043°\n",
+      "Bus_11: P = -0.0350pu, Q = -0.0180pu, V = 1.0571pu, theta = -14.7953°\n",
+      "Bus_12: P = -0.0610pu, Q = -0.0160pu, V = 1.0552pu, theta = -15.0774°\n",
+      "Bus_13: P = -0.1350pu, Q = -0.0580pu, V = 1.0504pu, theta = -15.1589°\n",
+      "Bus_14: P = -0.1490pu, Q = -0.0500pu, V = 1.0358pu, theta = -16.0389°\n",
+      "Converged in 3 iterations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "net = IEEE14()\n",
+    "solver = AC_PF(net)\n",
+    "solver.solve(verbose=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "e92ab0f2",
    "metadata": {},
