Running machine learning and single line ac_physics

--- a/trabalhos_transmissao/trab_aula_9_e_10/main.ipynb
+++ b/trabalhos_transmissao/trab_aula_9_e_10/main.ipynb
@@ -87,6 +87,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1dbd811e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NET = IEEE118()\n",
+    "SOLVER = ACEconDispatch(NET)\n",
+    "SOLVER."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "f3829139",
    "metadata": {},
